@@ -16,6 +16,7 @@ class PQXX_PRIVATE transaction_transactionfocus : callgate<transaction_base>
   {
     home().unregister_focus(focus);
   }
+  // XXX: Can we make this a view?
   void register_pending_error(std::string const &error)
   {
     home().register_pending_error(error);
