@@ -9,6 +9,7 @@
  - `multi_to_string()` to convert multiple values into one `std::string`.
  - Implicit `zview` constructor from `char const *`. (#389)
  - Many `std::string&` parameters are now `zview` or `std::string_view`.
+ - Now checking statement parameter lengths for overflow.
 7.2.1
  - Fix infinite loop in converting `char *` to string. (#377)
  - Deprecated `namedclass`.
